--- a/index.html
+++ b/index.html
@@ -199,7 +199,21 @@
         </div>
       </div>
       <!-- Fin Sobre Mí -->
-
+      <!-- Inicio Proyectos-->
+      <div id="contact" class="section">
+        <div class="container">
+          <p class="contact-title">PROYECTOS</p>
+          <div class="row">
+            <div class="col-md-4">
+              <a style="background-color: #D43F52; color: #ffffff;" class="btn btn-block" href="https://github.com/Leonardheim/mediconnect.git" target="_blank"> Proyecto Gestión de Citas</a>
+            </div>
+            <div class="col-md-4">
+              <a style="background-color: #D43F52; color: #ffffff;" class="btn btn-block" href="https://github.com/Leonardheim/gestion_notas.git" target="_blank"> Proyecto Gestión de Notas</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Fin Proyectos-->
       <!-- Inicio de contacto -->
       <div id="contact" class="section">
         <div class="container">
